--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,4 +1,8 @@
-.pag-section {
+.page-section {
+    padding: 1.2rem 0;
+    @mixin atMedium {
+        padding: 4.5rem 0;
+    }
     padding: 4.5rem 0;
     &--blue {
         background-color: $mainBlue;
